--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@nuxt/content": "^3.6.0",
+    "better-sqlite3": "^11.10.0",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
