--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@ayingott/eslint-config": "^2.0.5",
     "@ayingott/prettier-config": "^2.1.5",
+    "@iconify-json/lucide": "^1.2.53",
     "@unocss/nuxt": "^66.2.3",
     "eslint": "^9.29.0",
     "lint-staged": "^16.1.2",
