--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.6.3",
+    "@nuxt/ui": "^3.2.0",
     "better-sqlite3": "^12.2.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
@@ -25,16 +26,14 @@
   "devDependencies": {
     "@ayingott/eslint-config": "^2.0.5",
     "@ayingott/prettier-config": "^2.1.5",
-    "@iconify-json/lucide": "^1.2.57",
     "@types/node": "^24.0.15",
-    "@unocss/nuxt": "^66.3.3",
     "eslint": "^9.31.0",
     "lint-staged": "^16.1.2",
     "nuxt": "latest",
     "prettier": "^3.6.2",
     "simple-git-hooks": "^2.13.0",
+    "tailwindcss": "^4.1.11",
     "taze": "^19.1.0",
-    "unocss": "^66.3.3",
     "wrangler": "^4.25.0"
   },
   "simple-git-hooks": {
