--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,9 @@
 onlyBuiltDependencies:
   - "@parcel/watcher"
+  - "@tailwindcss/oxide"
   - better-sqlite3
   - esbuild
   - sharp
   - simple-git-hooks
+  - vue-demi
   - workerd
