--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@ayingott/eslint-config": "^2.0.5",
     "@ayingott/prettier-config": "^2.1.5",
+    "@iconify-json/lucide": "^1.2.57",
     "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "lint-staged": "^16.1.2",
